# urjtag

./: README.md  README_cn.md
urjtag/: .gitignore  UrJTAG.nsi
urjtag/bindings/python/: Makefile.am  chain.c
urjtag/examples/: addpart_without_detect.script  epm570t100.script  erase.script  erase.svf  example.c  example.py  example.script  jtag.c  run_parse_line.py
urjtag/include/urjtag/: log.h
urjtag/src/cmd/: Makefile.am  cmd_addpart.c
urjtag/src/global/: log-error.c
urjtag/src/svf/: svf.c  svf.h  svf_bison.y  svf_flex.l
